Java 22 - Validation before super, Gather stream